@@ -15,7 +15,13 @@
 
 ## v0.*.*
 
+### Enhancements
 
+ - `Chunky.Fraction`
+  - `to_float/2` - convert to a float, with optional precision rounding
+  - `min/1` - find the smallest from a list of fractions
+  - `min/2` - find the smallest of two fractions
+  
 ## v0.6.2
 
 ### Documentation
